# RawafGuides

backend/: .env  .gitignore  main.py  pyproject.toml  rawaf.db
backend/core/: config.py  sequrity.py
backend/db/: database.py
backend/models/: hotel.py  models.py  package.py  pilgrim.py  room.py  user.py
backend/routers/: admin.py  auth.py  user.py
backend/schemas/: hotel.py  package.py  pilgrim.py  room.py  schemas.py  token.py  user.py
backend/services/: guide_services.py  package_services.py  packages_services.py  pilgrims_services.py  utils.py
backend/services/admin_services/: dashboard_services.py  file_maker.py  guide_file_utils.py  guide_services.py  pilgrims_file_utils.py  pilgrims_services.py
backend/services/guide_services/: hotels_services.py  pilgrims_services.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  GuidesPage.jsx  LoginPage.jsx  auth.js  main.jsx
frontend/src/api/: api.js
frontend/src/components/: DownloadPilgrims.jsx  ProtectedRoute.jsx  UploadFile.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AdminDashboard.jsx  GuideDashboard.jsx  Login.jsx
