[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.13.1",
    "fastapi==0.110.0",
    "openpyxl==3.1.2",
    "pandas==2.2.2",
    "bcrypt==4.0.1",
    "passlib[bcrypt]==1.7.4",
    "psycopg2-binary==2.9.9",
    "pydantic-settings==2.2.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "sqlalchemy==2.0.30",
    "uvicorn==0.29.0",
    "pydantic==2.7.1",
]

